FIX home button spacing

--- a/src/header-footer/syle-sheet.css
+++ b/src/header-footer/syle-sheet.css
@@ -19,6 +19,7 @@
   border: none;
   cursor: pointer;
   font-size: x-large;
+  margin-right: 40px;
 }
 
 .login-button {
